RESOLVED FIXED129691
REGRESSION: Overlay scrollbars that have grown are sometimes askew in the track
https://bugs.webkit.org/show_bug.cgi?id=129691
Summary REGRESSION: Overlay scrollbars that have grown are sometimes askew in the track
Beth Dakin
Reported 2014-03-04 11:50:46 PST
Overlay scrollbars that have grown are sometimes askew in the track. This started happening after we adopted the setPresentationValue ScrollbarPainter API which allowed us to update the position of the scrollbar knob from our secondary scrolling thread. This bug occurs when the scrollbar grows while it still thinks it is in presentation-value mode. Whenever the scrollbar grows, it should be in non-presentation value mode. <rdar://problem/15666846>
Attachments
Patch (3.81 KB, patch)
2014-03-04 12:00 PST, Beth Dakin
simon.fraser: review+
Beth Dakin
Comment 1 2014-03-04 12:00:12 PST
Beth Dakin
Comment 2 2014-03-04 12:16:46 PST
Note You need to log in before you can comment on or make changes to this bug.